2006-11-23  Simon Budig  <simon@gimp.org>

	* plug-ins/script-fu/tinyscheme/scheme-private.h
	* plug-ins/script-fu/tinyscheme/scheme.[ch]: Changed tinyscheme
	to provide a safe spot to protect intermediate values from the
	garbage collector. Fixes some really ugly problems with arrays.

	Most likely not the best solution, we need to discuss this with
	the tinyscheme maintainers.

	* plug-ins/script-fu/scheme-wrapper.c: changed accordingly, plus
	reordering some stuff to protect it from the eager GC.

2006-11-23  Sven Neumann  <sven@gimp.org>

	* cursors/Makefile.am (EXTRA_DIST): added xbm/cursor-mouse-mask.xbm.

2006-11-23  Michael Natterer  <mitch@gimp.org>

	* plug-ins/help/gimphelpitem.[ch]
	* plug-ins/help/gimphelplocale.[ch]: added some EEKy members to
	the structs where the browser can store its state.

	* plug-ins/helpbrowser/Makefile.am
	* plug-ins/helpbrowser/helpbrowser.c: link against libgimphelp.a
	and implement all the help ID mapping ourselves.

	* plug-ins/helpbrowser/dialog.[ch]: added a tree view with the
	help IDs of the current help domain. Double click to jump to an
	item. Very early-stage code and very unusable, please try anyway.

	* app/widgets/gimphelp.c: if the help browser is available, call
	it directly, not via the help plug-in.

2006-11-23  Sven Neumann  <sven@gimp.org>

	* plug-ins/help/Makefile.am (libgimphelp_a_SOURCES): removed help.h.

	* Makefile.am (EXTRA_DIST): removed po-*/update.sh.

2006-11-23  Michael Natterer  <mitch@gimp.org>

	* app/plug-in/gimpplugin-cleanup.c: remove useless newlines from
	debugging output.

2006-11-23  Michael Natterer  <mitch@gimp.org>

	* plug-ins/help/Makefile.am: link libgimphelp as not installed .a

	* plug-ins/help/gimphelpdomain.[ch] (gimp_help_domain_map): return
	the GimpHelpLocate the ID was found in.

	* plug-ins/help/gimp-help-lookup.c
	* plug-ins/help/help.c: changed accordingly.

	* plug-ins/help/gimphelp.h: disable debug output.

2006-11-23  Simon Budig  <simon@gimp.org>
